<resources>
    <string name="app_name">test3</string>

    <string name="gmail">Gmail</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="create_one">Create one</string>
    <string name="change_language">Change Language</string>
    <string name="username">Username</string>
    <string name="gmail1">Gmail</string>
    <string name="password1">Password</string>
    <string name="register">Register</string>
    <string name="multiplication">Multiplication</string>
    <string name="clock">Clock</string>
    <string name="directions">Directions</string>
    <string name="spell">Spell</string>
    <string name="similar_pictures">Similar Pictures</string>
    <string name="digits_forward">Digits Forward</string>
    <string name="digits_backward">Digits Backward</string>
    <string name="logout">LOGOUT</string>
    <string name="days_of_week">Days Of Week</string>

    <string name="follow_the_ball">Follow the Ball</string>
    <string name="months_of_year">Months of Year</string>
    <string name="seasons">Seasons</string>
    <string name="click_to_learn">Click to learn</string>
    <string name="check_answer">Check Answer</string>
    <string name="enter_your_answer_here">Enter your answer here</string>
    <string name="textview">TextView</string>

    <string name="numbers_will_be_shown_here">Numbers will be shown here</string>
    <string name="generate_digit">Generate Digit</string>
    <string name="answer">Answer:</string>
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="check_answer1">Check answer</string>
    <string name="enter_your_message_here1">Enter your message here</string>
    <string name="check_answer2">Check answer</string>
    <string name="drop_here">DROP HERE</string>
    <string name="textview2">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textview7">TextView</string>
    <string name="textview8">TextView</string>

    <string name="drag_the_correct_answer">Drag the correct answer</string>
    <string name="next">NEXT</string>
    <string name="correct_answer5">Correct Answer:</string>
    <string name="random_say_gel">Random Number</string>
    <string name="summit">Summit</string>
    <string name="enter_the_table_number">Enter the table number</string>
    <string name="enter_the_number">enter the number</string>
    <string name="submit">Submit</string>
    <string name="spring">SPRING</string>
    <string name="summer">SUMMER</string>
    <string name="fall">FALL</string>
    <string name="winter">WINTER</string>
    <string name="check">Check</string>
    <string name="what_season_is_it">What season is it?</string>
    <string name="name">Name</string>
    <string name="play">Play</string>
    <string name="learn">Learn</string>
    <string name="continue2">CONTINUE</string>
    <string name="enter_the_word">Enter the word</string>
    <string name="click_to_the_sound_button">Click to the sound button</string>
    <string name="click">Click</string>
    <string name="numbers_will_be_shown_here4">Numbers will be shown here.</string>
    <string name="generate_digit7">Generate Digit</string>
    <string name="answer8">Answer:</string>
    <string name="continue4">Continue</string>
    <string name="enter_your_answer_here4">Enter your answer here</string>
    <string name="check_answer4">Check Answer</string>
    <string name="textview33">TextView</string>
    <string name="click_to_learn4">Click to learn</string>
    <string name="categories">Categories</string>
    <string name="analog_clock">Analog Clock</string>
    <string name="digital_clock">Digital Clock</string>
    <string name="see_another_example">See Another Example</string>
    <string name="put_your_answer_here">Put your answer here:</string>
    <string name="check22">Check</string>
    <string name="register4">Register</string>
    <string name="_00_00">00:00</string>
    <string name="change">CHANGE</string>
    <string name="numbers_will_be_shown_here3">Numbers will be shown here.</string>
    <string name="generate_digit4">Generate Digit</string>
    <string name="numbers_will_be_shown_here44">Numbers will be shown here.</string>
    <string name="generate_digit44">Generate Digit</string>
    <string name="submit4">Submit</string>
    <string name="enter_the_word3">Enter the word:</string>
    <string name="days_question">What is the %dth day of the week?</string>
    <string name="month_question">What is the %d. month of the year?</string>
    <string name="correctMonths">CORRECT!</string>
    <string name="wrongMonths">"Wrong. Answer is: "</string>
    <string name="login3">Login</string>
    <string name="wrong_try_again">Wrong. Try again.</string>
    <string name="correct">CORRECT!</string>
    <string name="what_is_the_dth_day_of_the_week">What is the %dth day of the week?</string>
    <string name="true_str">TRUE</string>
    <string name="false_try_again">FALSE TRY AGAIN</string>
    <string name="go_ahead">go ahead</string>
    <string name="go_past">go past</string>
    <string name="stop">stop</string>
    <string name="turn_left">turn left</string>
    <string name="turn_right">turn right</string>
    <string name="go_straight_on">go straight on</string>
    <string name="wrong_next_question_is_coming">Wrong. Next question is coming.</string>
    <string name="correct4">Correct!</string>
    <!-- Strings used for fragments for navigation -->


</resources>