<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:background="@color/b3"
    tools:context=".logorreg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login3"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/gmail"
                android:textSize="20sp"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                 />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:textSize="20sp"
                android:background="@drawable/custom_edittext"
                android:scaleType="centerCrop"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/login"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"
                android:layout_marginTop="30dp"
                app:cornerRadius = "20dp" />



        </LinearLayout>
        
    </androidx.cardview.widget.CardView>



    <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            android:text="@string/don_t_have_an_account_yet"
        android:textColor="@color/purple"
        android:layout_marginBottom="20dp"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/createbtn"
            android:layout_width="100dp"
            android:layout_height="51dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/custom_button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/create_one"
            />




    <Button
        android:id="@+id/buttonlang"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:text="@string/change_language"
        android:textAllCaps="false"
        android:textSize="25sp"
        />


</LinearLayout>