<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bc34"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirGameActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="373dp"
        android:layout_height="254dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="345dp"
        app:layout_constraintBottom_toTopOf="@+id/txtviewcheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        app:srcCompat="@drawable/gopast" />

    <TextView
        android:id="@+id/target"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/drop_here"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="64dp"
        android:layout_height="30dp"
        android:background="@color/pinky"
        android:text="@string/textview2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="64dp"
        android:layout_height="30dp"
        android:layout_marginStart="280dp"
        android:background="@color/pinky"

        android:text="@string/textview4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="64dp"
        android:layout_height="30dp"
        android:layout_marginEnd="64dp"
        android:background="@color/pinky"
        android:text="@string/textview5"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="64dp"
        android:layout_height="30dp"
        android:text="@string/textview6"
        android:background="@color/pinky"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="64dp"
        android:layout_height="30dp"
        android:layout_marginBottom="168dp"
        android:text="@string/textview7"
        android:background="@color/pinky"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="64dp"
        android:layout_height="30dp"
        android:layout_marginStart="56dp"
        android:background="@color/pinky"
        android:text="@string/textview8"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/txtviewcheck"
        android:layout_width="264dp"
        android:layout_height="47dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="50dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="237dp"
        android:layout_height="26dp"
        android:text="@string/drag_the_correct_answer"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/target"
        app:layout_constraintVertical_bias="0.185" />
    <Button
        android:id="@+id/languageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:text="TR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>