<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:background="@color/b3"
    tools:context=".logorreg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register4"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>
            <EditText
                android:id="@+id/usernameedt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/username"
                android:textSize="20sp"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                />

            <EditText
                android:id="@+id/emailedt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/gmail1"
                android:textSize="20sp"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/passwordedt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password1"
                android:textSize="20sp"
                android:background="@drawable/custom_edittext"
                android:scaleType="centerCrop"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                />

            <Button
                android:id="@+id/regbutton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/register"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:background="@drawable/custom_button"
                android:layout_marginTop="30dp"
                app:cornerRadius = "20dp" />



        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>